name:                my-clippings
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/yurrriq/my-clippings#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Bailey
maintainer:          eric@ericb.me
copyright:           Copyright: (c) 2016 Eric Bailey
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Kindle.Clippings
                     , Text.Kindle.Clippings.Types
                     , Text.Kindle.Clippings.Reader
  build-depends:       base     >=    4.7 && <    5
                     , text     >=    1.2 && <    1.3
                     , trifecta >=    1.6 && <    1.7
                     , parsec   >=    3.1 && <    3.2
                     , parsers  >= 0.12.4 && < 0.12.5
  default-language:    Haskell2010

test-suite my-clippings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-clippings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/my-clippings
